my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EDIVZ/EDIVZ.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EDIVZ.dml:8:1: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EDIVZ.dml:10:9: error EDIVZ: right-hand side operand of '/' is zero
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EDIVZ.dml:12:9: error EDIVZ: right-hand side operand of '%' is zero
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EDIVZ.dml:17:9: error EDIVZ: right-hand side operand of '/' is zero
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EDIVZ.dml:19:9: error EDIVZ: right-hand side operand of '%' is zero
